<resources>
    <string name="app_name">Project Josh</string>
    <string name="app_icon">App icon</string>
    <string name="ayo_mulai">Ayo Mulai</string>
    <string name="masuk">Masuk</string>
    <string name="username">Email / Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="atau">Atau</string>
    <string name="pendaftaran">PENDAFTARAN</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="setuju_syarat_dan_ketentuan">Setuju Syarat dan Ketentuan</string>
    <string name="verifikasi">VERIFIKASI</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="tidak_menerima_kode">Tidak menerima kode?</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="profil_siswa">PROFIL SISWA</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="nama_ortu">Nama Orang Tua</string>
    <string name="hp_ortu">Nomor HP Orang Tua</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="poin">Poin</string>
    <string name="content_icon">Content Icon</string>
    <string name="cannot_null">Tidak boleh kosong</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="subtitle">Kamu Bisa Belajar\nDirumah Sekarang</string>
    <string name="title">Selamat Datang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lanjut">LANJUT</string>
</resources>