<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNama"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/nama_lengkap"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTanggal"
        app:layout_constraintTop_toBottomOf="@id/tvNama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tanggal"
        app:layout_constraintVertical_bias="0"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvOrtu"
        app:layout_constraintTop_toBottomOf="@id/tvTanggal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/nama_ortu"
        app:layout_constraintVertical_bias="0"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHportu"
        app:layout_constraintTop_toBottomOf="@id/tvOrtu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hp_ortu"
        app:layout_constraintVertical_bias="0"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAsalsekolah"
        app:layout_constraintTop_toBottomOf="@id/tvHportu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/asal_sekolah"
        app:layout_constraintVertical_bias="0"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFotoprofil"
        app:layout_constraintTop_toBottomOf="@id/tvAsalsekolah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/foto_profil"
        app:layout_constraintVertical_bias="0"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
        android:layout_width="133dp"
        android:layout_height="133dp"
        app:layout_constraintTop_toBottomOf="@id/tvFotoprofil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_child_care_24"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>